deployment/terraform-main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.0"
    }
  }
}

provider "aws" {
  region = "us-east-1"
}

resource "aws_instance" "sunny_server" {
  ami           = "ami-0c55b159cbfafe1d0"  # Ubuntu 22.04
  instance_type = "t3.medium"

  tags = {
    Name = "Sunny-Platform"
  }

  security_groups = [aws_security_group.sunny_sg.name]
}

resource "aws_security_group" "sunny_sg" {
  name_prefix = "sunny-"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
